Make it consistent

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 			<h1 id="header-text">Adrian Cris Gallano</h1>
 			<p>Software Engineer | AI Engineer </p>
 			<ul class="icons">
-				<li><a href="https://github.com/AdrianGallano" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="https://www.linkedin.com/in/aidgallano/" class="icon brands fa-linkedin"><span class="label">Linkein</span></a></li>
+				<li><a href="https://github.com/AdrianGallano" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+				<li><a href="https://www.linkedin.com/in/aidgallano/" class="icon brands fa-linkedin"><span
+							class="label">Linkein</span></a></li>
 			</ul>
 			<ul class="actions">
 				<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
@@ -101,6 +103,7 @@
 						well
 						as web development, and mindsets when learning programming.</p>
 				</div>
+				<hr />
 			</section>
 		</div>
 	</section>
@@ -159,30 +162,35 @@
 			<section>
 				<div class="box alt">
 					<div class="row gtr-uniform ">
-						<div class="col-5"><span class="image fit"><img src="images/hackathon1.jpg" alt="" /></span></div>
-						<div class="col-7"><span class="image fit"><img src="images/hackathon3.jpeg" alt="" /></span></div>
-						<div class="col-12"><span class="image fit"><img src="images/hackathon2.jpg" alt="" /></span></div>
+						<div class="col-5"><span class="image fit"><img src="images/hackathon1.jpg" alt="" /></span>
+						</div>
+						<div class="col-7"><span class="image fit"><img src="images/hackathon3.jpeg" alt="" /></span>
+						</div>
+						<div class="col-12"><span class="image fit"><img src="images/hackathon2.jpg" alt="" /></span>
+						</div>
 					</div>
 				</div>
 
-	</section>
+			</section>
 
 
-	<!-- Footer -->
-	<footer id="footer">
-		<ul class="icons">
-			<li><a href="https://github.com/AdrianGallano" class="icon brands fa-github"><span class="label">Github</span></a></li>
-			<li><a href="https://www.linkedin.com/in/aidgallano/" class="icon brands fa-linkedin"><span class="label">Linkein</span></a></li>
-		</ul>
-	</footer>
+			<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://github.com/AdrianGallano" class="icon brands fa-github"><span
+								class="label">Github</span></a></li>
+					<li><a href="https://www.linkedin.com/in/aidgallano/" class="icon brands fa-linkedin"><span
+								class="label">Linkein</span></a></li>
+				</ul>
+			</footer>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
+			<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 </body>
 
